gegerator-client/src/app/old-components/summary/summarypanel/summarypanel.component.scss
@use '../../../../_variables.scss' as *;

.summary-panel{
    max-width: 400px;
    border-left: 2px solid black;
    height: 100%;
    background-color: $tertiary-pane-color;
    display: flex;
    
    .pane{
        display:flex;
        flex-direction: column;
    }


    h1{
        @include sect-title;
        margin: 0;
        padding: $small-gap 0;
        background-color: $secondary-pane-color;
    }
    
    .pane-content{
        flex: 1;
        background-color: $tertiary-pane-color;
        padding: $default-gap;
        overflow-y: auto;
    }


}

// cheating a bit
:host ::ng-deep .mat-tab-header{
    background-color: $secondary-pane-color;
}

